Restore mappings for older Xbox One S Bluetooth gamepads on OSX/Linux

Microsoft released a firmware update for Xbox One S gamepads that changed
the button and axis assignments when connected over Bluetooth, requiring a
new mapping in Chrome. In a previous CL, the mappings for the old firmware
were removed under the assumption that soon all gamepads would use the new
firmware mappings. However, this was incorrect as the new mappings are not
exposed on all platforms. Furthermore, Xbox One S gamepads are still
shipping with the old FW and users may not have the means to update.

On OSX, gamepads with the old FW use device ID 045e:02e0 while those with
the new FW use 045e:02fd. This CL re-adds the mapping for the old FW that
was previously replaced. The new mapping will still be applied to gamepads
with the new FW.

On Linux, gamepads with either FW use device ID 045e:02e0 and need the old
mapping which was previously replaced. This CL re-adds the mapping for the
old FW. The new FW mapping is retained for now, but may be removed in the
future as it should now be unused.

On Windows, Xbox One S gamepads are handled by the OS and are exposed to
Chrome as Xbox 360 compatible gamepads. No extra work is required to
support the old FW.

On Android, the default mapping is correct for the new FW but a custom
mapping is required to support the old FW. This will be addressed in a
future CL.

BUG=705506

Review-Url: https://codereview.chromium.org/2798933004
Cr-Commit-Position: refs/heads/master@{#490505}

Former-commit-id: 0901a39d9de30d0a98d483a79b7963cbcf1cfd90